kubernetes/apps/database/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app emqx-dashboard
spec:
  hostnames:
    - "emqx.bykaj.app"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 18083
